# edc-connector-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  artifacts.json  changelog.rss  dist-workspace.toml  index.html  oranda.json  release-plz.toml
.github/workflows/: release.yml  test.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.1.10/: index.html
changelog/v0.1.3/: index.html
changelog/v0.1.4/: index.html
changelog/v0.1.5/: index.html
changelog/v0.1.6/: index.html
changelog/v0.1.7/: index.html
changelog/v0.1.8/: index.html
changelog/v0.1.9/: index.html
src/: app.rs  components.rs  config.rs  main.rs  runner.rs
src/app/: fetch.rs  model.rs  msg.rs
src/components/: agreements.rs  assets.rs  connectors.rs  contract_definitions.rs  contract_negotiations.rs  dataplanes.rs  edrs.rs  header.rs  policies.rs  resources.rs  table.rs  transfer_processes.rs
src/components/header/: msg.rs
src/components/resources/: filter.rs  msg.rs  resource.rs
src/types/: nav.rs
src/widgets/: form.rs
src/widgets/form/: button.rs  msg.rs  row.rs  text.rs
