[package]
name = "edc-connector-tui"
version = "0.1.9"
edition = "2021"
license = "Apache-2.0"
description= "A TUI client for EDC management APIs"
repository = "https://github.com/dataspace-rs/edc-connector-tui"
keywords = ["dataspace", "http", "cli", "tui"]
categories = []
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
tui-textarea = "0.7.0"
clap = { version = "4.5.30", features = ["derive"] }
anyhow = "1.0.96"
dirs-next = "2.0.0"
toml = "0.8.20"
futures = "0.3.31"
tokio= {version="1", features=["full"]}
serde={version = "1", features= ["derive"]}
serde_json= "1"
async-trait = "0.1.88"
edc-connector-client ="0.3.9"
enum-ordinalize = "4.3.0"
strum = "0.26.3"
arboard = { version = "3.4.0", features = ["wayland-data-control"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tui-scrollview = "0.5.1"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
directories = "6.0.0"
lazy_static = "1.5.0"
tracing = "0.1.41"
derive_builder = "0.20.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
allow-dirty = ["ci"]
pr-run-mode = "plan"

[workspace.metadata.dist.dependencies.apt]
pkg-config = '*'
libdbus-1-dev ='*'
